service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quarkuscoffeeshop-barista
  labels:
    app:  quarkuscoffeeshop-barista
spec:
  selector:
    app:  quarkuscoffeeshop-barista
  type: ClusterIP
  ports:
    - name: 8778-tcp
      port: 8778
      protocol: TCP
      targetPort: 8778
    - name: 9779-tcp
      port: 9779
      protocol: TCP
      targetPort: 9779
---
apiVersion: v1
kind: Service
metadata:
  name: quarkuscoffeeshop-core
  labels:
    app: quarkuscoffeeshop-core
spec:
  selector:
    app: quarkuscoffeeshop-core
  type: ClusterIP
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: quarkuscoffeeshop-customermocker
  labels:
    app: quarkuscoffeeshop-customermocker
spec:
  selector:
    app: quarkuscoffeeshop-customermocker
  type: ClusterIP
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: quarkuscoffeeshop-kitchen
  labels:
    app: quarkuscoffeeshop-kitchen
spec:
  selector:
    app: quarkuscoffeeshop-kitchen
  type: ClusterIP
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: quarkuscoffeeshop-inventory
  labels:
    app: quarkuscoffeeshop-inventory
spec:
  selector:
    app: quarkuscoffeeshop-inventory
  type: ClusterIP
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: quarkuscoffeeshop-customerloyalty
  labels:
    app: quarkuscoffeeshop-customerloyalty
spec:
  selector:
    app: quarkuscoffeeshop-customerloyalty
  type: ClusterIP
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: quarkuscoffeeshop-web
  labels:
    app: quarkuscoffeeshop-web
spec:
  selector:
    app: quarkuscoffeeshop-web
  type: ClusterIP
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
